[package]
name = "lru"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.28"
byteorder = "1.3.4"
dirs = "2.0.2"
indexmap = "1.3.2"
structopt = "0.3.14"
